2006-04-07  Derek Atkins  <derek@ihtfp.com>

	* lib/libqof/qof/qof.h:  QOF requires <glib.h>

2006-04-07  Neil Williams  <linux@codehelp.co.uk>

	* libqof/qof/qof-be-utils.h : Removed. Content
	moved into qofutil.c alongside the function versions.

	* libqof/qof/qofutil.c : Replaces gnc-engine-util.c
	* libqof/qof/gnc-engine-util.c : Removed.
	* libqof/qof/qofutil.h : Replaces gnc-engine-util.h
	* libqof/qof/gnc-engine-util.h : Removed.

	Standardise on gint and gchar. libqof 0.6.4 release.
	* libqof/qof/qofbackend-p.h :
	* libqof/qof/qofbook.c :
	* libqof/qof/qofbackend.h : Replace Doxygen fix.
	* libqof/qof/qofbook.h :
	* libqof/qof/kvp_frame.c :
	* libqof/qof/qofquery.c :
	* libqof/qof/kvp_frame.h :
	* libqof/qof/qoflog.c : Add Utilities to the default
	log_module list.
	* libqof/qof/qofquerycore.h :
	* libqof/qof/qoflog.h :
	* libqof/qof/qofsession.h :
	* libqof/qof/qofid-p.h :
	* libqof/qof/qofreference.c :
	* libqof/qof/qofsql.c : Allow INSERT queries 
	to be logged.
	* libqof/qof/qofsql.h :
	* libqof/qof/gnc-numeric.h :
	* libqof/qof/qofclass.h :
	* libqof/qof/qofla-dir.h.in : Licence typo.
	* libqof/qof/qof.h : New files.
	* libqof/qof/guid.h :
	* libqof/qof/deprecated.c : Replace gnc_strpcpy.
	* libqof/qof/qofbook-p.h :
	* libqof/qof/deprecated.h : Deprecate 
	qof_book_set_schedxactions which has no
	declaration. Deprecate the expression of
	glib.h in the QOF API. libqof2 applications
	will have to include glib.h directly. Prevents
	a redundant dependency in qof packages.
	* libqof/qof/qofinstance.c :
	* libqof/qof/gnc-date.c :
	* libqof/qof/qofquerycore-p.h :
	* libqof/qof/gnc-date.h :
	* libqof/qof/qofevent.c :
	* libqof/qof/qofevent.h :
	* libqof/qof/qofid.h :
	* libqof/qof/qofbookmerge.c :
	* libqof/qof/qofbookmerge.h :
	* libqof/qof/qofgobj.c :
	* libqof/qof/Makefile.am : New files.
	* libqof/qof/qofbackend.c : Move the function 
	versions of the begin_edit and commit_edit
	routines to the Utilities file alongside