@@ -1,3 +1,8 @@
+2006-04-07  David Hampton  <hampton@employees.org>
+
+	* src/gnome-utils/gnc-main-window.c: Include the svn revision
+	number in the about dialog.
+
 2006-04-07  Derek Atkins  <derek@ihtfp.com>
 
 	* lib/libqof/qof/qof.h:  QOF requires <glib.h>
